...
                            }
                        ))
                    }
                }
            }
        }
        .accessibilityIdentifier("SettingsViewIdentifier")
    }
}

