...
                    }
                .offset(y: -90)
                .foregroundColor(.gray)
                .font(.system(size: 32))
            }
        }
        .accessibilityIdentifier("TracingViewIdentifier")
    }
}

